--- a/index.html
+++ b/index.html
@@ -646,12 +646,11 @@
 											<dt>Inmueble:</dt><dd>{{cells.inmueble}}</dd>
 											<dt>Tipo:</dt><dd>{{cells.tipo}}</dd>
 											<dt>Área Construida:</dt><dd>{{cells.area_construida}} m<sup>2</sup></dd>
-											<dt>Área Privada:</dt><dd>{{cells.area_uso_exclusivo}} m<sup>2</sup></dd>
+											<dt>Área Privada:</dt><dd>{{cells.area_privada}} m<sup>2</sup></dd>
 											<dt>Valor Inmueble:</dt><dd>$ {{cells.valor_inmueble}}</dd>
 										</dl>
 										<h3>Parqueadero</h3>
 										<dl class="dl-horizontal">
-											<dt>Parqueadero:</dt><dd>{{cells.parqueadero}}</dd>
 											<dt>Área:</dt><dd>{{cells.area}} m<sup>2</sup></dd>
 											<dt>Valor Parqueadero:</dt><dd>$ {{cells.valor_parqueadero}}</dd>
 											<hr/>
