--- a/index.html
+++ b/index.html
@@ -280,6 +280,14 @@
 				<div class="row">
 					<h1 class="text-center"><strong>Avances de obra</strong></h1>
 					<div id="photo-gallery" class="owl-carousel owl-theme">
+						<a href="images/galeria/38.jpg" data-toggle="lightbox" data-gallery="gallery"><img src="images/galeria/38.jpg" class="img-responsive"></a>
+						<a href="images/galeria/39.jpg" data-toggle="lightbox" data-gallery="gallery"><img src="images/galeria/39.jpg" class="img-responsive"></a>
+						<a href="images/galeria/40.jpg" data-toggle="lightbox" data-gallery="gallery"><img src="images/galeria/40.jpg" class="img-responsive"></a>
+						<a href="images/galeria/41.jpg" data-toggle="lightbox" data-gallery="gallery"><img src="images/galeria/41.jpg" class="img-responsive"></a>
+						<a href="images/galeria/42.jpg" data-toggle="lightbox" data-gallery="gallery"><img src="images/galeria/42.jpg" class="img-responsive"></a>
+						<a href="images/galeria/43.jpg" data-toggle="lightbox" data-gallery="gallery"><img src="images/galeria/43.jpg" class="img-responsive"></a>
+						<a href="images/galeria/44.jpg" data-toggle="lightbox" data-gallery="gallery"><img src="images/galeria/44.jpg" class="img-responsive"></a>
+						<a href="images/galeria/45.jpg" data-toggle="lightbox" data-gallery="gallery"><img src="images/galeria/45.jpg" class="img-responsive"></a>
 						<a href="images/galeria/35.jpg" data-toggle="lightbox" data-gallery="gallery"><img src="images/galeria/35.jpg" class="img-responsive"></a>
 						<a href="images/galeria/34.jpg" data-toggle="lightbox" data-gallery="gallery"><img src="images/galeria/34.jpg" class="img-responsive"></a>
 						<a href="images/galeria/33.jpg" data-toggle="lightbox" data-gallery="gallery"><img src="images/galeria/33.jpg" class="img-responsive"></a>
